--- a/470_Project_FLYT.ipynb
+++ b/470_Project_FLYT.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "# Read csv of Education distribution\n",
     "# Remove all the entries that don't have \"County\"\n",
-    "df = pd.read_csv('Compiled_data_for_code.csv')\n",
+    "df = pd.read_csv('Education_data_compiled.csv')\n",
     "df = df[df['Area name'].str.contains('County')]\n",
     "df = df.sort_values(by=['Area name'],ignore_index=True)"
    ]
