--- a/Develop LSTM Models for Time Series Forecasting.ipynb
+++ b/Develop LSTM Models for Time Series Forecasting.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python must be at version 3.6 to run keras"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -87,8 +94,7 @@
     "x_input = array([70, 80, 90, 2, 40, 3])\n",
     "x_input = x_input.reshape((1, n_steps+features_length, n_features))\n",
     "yhat = model.predict(x_input, verbose=0)\n",
-    "print(yhat)\n",
-    "\n"
+    "print(yhat)"
    ]
   },
   {
