--- a/Project_fixed.ipynb
+++ b/Project_fixed.ipynb
@@ -22,7 +22,7 @@
     "from keras.models import Sequential\n",
     "from keras.layers import LSTM\n",
     "from keras.layers import Dense\n",
-    "from us_state_abbrev import us_state_abbrev #thanks to Github: rogerallen\"\n"
+    "from us_state_abbrev import us_state_abbrev #thanks to Github: rogerallen\""
    ]
   },
   {
@@ -61,8 +61,7 @@
     "result = pd.merge(df,new_df,how='inner', on=['Area name','State'])\n",
     "df = result.rename(columns={\"Area name\": \"County\", \"Unemployment_rate_2019\": \"Percent of unemployment 2019\",\n",
     "                            \"Median_Household_Income_2018\": \"Median Household Income 2018\"})\n",
-    "df[\"Median Household Income 2018\"] = df[\"Median Household Income 2018\"].astype(float)\n",
-    "\n"
+    "df[\"Median Household Income 2018\"] = df[\"Median Household Income 2018\"].astype(float)"
    ]
   },
   {
@@ -791,7 +790,7 @@
     "        county_stat = np.array(county_stat[0]) \n",
     "        # Make prediction \n",
     "        n_steps = 1 \n",
-    "        test_train_split = 0.7 \n",
+    "        test_train_split = 0.9 \n",
     "        yhat_array = make_prediction(county_ts, county_stat, test_train_split, n_steps) \n",
     "        # Dataframe of results \n",
     "        county_pred = pd.DataFrame([[list_counties[i][0],list_counties[i][1],\n",
